# vodf_schema

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.rst  Dockerfile  MANIFEST.in  README.md  pyproject.toml  sonar-project.properties
.github/: release-drafter.yml
.github/workflows/: ci.yml  deploy.yml  sonar.yml
docs/: conf.py  index.rst  reference.rst
src/vodf_schema/: __init__.py  hdu.py  level_1.py  metadata.py  references.py  utilities.py
src/vodf_schema/level1/: __init__.py  eventlist.py  groups.py  observation.py
src/vodf_schema/level2/: __init__.py
src/vodf_schema/level3/: __init__.py
src/vodf_schema/tests/: test_fibonacci.py  test_level1.py  test_metadata.py  test_schemas.py  test_script.py  test_version.py
